FEATURE: UI   | Added a peak up/down column and some smoothed stats (up/down/eta) [Parg]
FEATURE: UI   | You can now rename any of the columns in table views to suit your needs [Parg]
FEATURE: UI   | Added 'Tags' column to Library views [Parg]
FEATURE: UI   | Library and Files view header now shows selected done/total file sizes when multi-selected [Parg]
FEATURE: Plug | Added discoveries tab to Library views for specific download/size lookup [Parg]
FEATURE: Plug | No-proxy option for RSS Feed Scanner [Parg]
FEATURE: Plug | No-proxy option for Satus Mailer [Parg]
FEATURE: Plug | Added support for user-provided flags to location provider [Parg]
FEATURE: Core | Added simple IPv6 connectivity test [Parg]
FEATURE: Core | Support renaming of device content correctly [Parg]
FEATURE: Core | Added a 'mark' feature to overall stats so you can count from a point in time as opposed to install date [Parg]
FEATURE: Core | Speed limit handler now supports profile specific network limits [Parg]
FEATURE: Core | Per-tag minimum share ration option [Parg]

CHANGE: UI    | Added roll-up ability for the 'Discovery' sidebar entry [TuxPaper]
CHANGE: UI    | Bring back sidebar popup menu [TuxPaper]
CHANGE: UI    | Removed unreliable/unsupported ping/tracert network tests [Parg]
CHANGE: UI    | Classic UI tab order memory added [Parg]
CHANGE: UI    | Moved search results and swarm discoveries to top of 'Discovery' entry [Parg]
CHANGE: UI    | Auto-hide devices that haven't been seen in a (configurable) time and alert when this happens [Parg]
CHANGE: UI    | Brazilian Portuguese translation update [Havokdan]
CHANGE: UI    | Basque translation update [Azpidatziak]
CHANGE: Plug  | Added serbian flags to location provider [Parg]
CHANGE: Core  | Improved performance of some averaging classes [Parg]
CHANGE: Core  | Major rework to file linking support [Parg]

BUGFIX: UI    | Fixed the min/max button shown for tab view [TuxPaper]
BUGFIX: UI    | Fixed some toolbar selection issues [TuxPaper]